--- a/index.html
+++ b/index.html
@@ -3,13 +3,63 @@
 
 <head>
     <title> CRUD com JAVASCRIPT puro </title>
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
 
+    <table>
+
+        <tr>
+            <td>
+                <form>
+                    <div>
+
+                        <label> Nome Completo </label>
+                        <input type="text" name="nomeCompleto">
+                    </div>
+
+                    <div>
+                        <label> ID </label>
+                        <input type="text" name="iD">
+                    </div>
+
+                    <div>
+                        <label> Salário </label>
+                        <input type="text" name="salario">
+                    </div>
+
+                    <div>
+                        <label> Cidade </label>
+                        <input type="text" name="cidade">
+                    </div>
+
+                    <div>
+                        <div class = "form-action-buttons"></div>
+                        <input type= "submit" value="Submit">
+                    </div>
+
+                </form>
+                <td>
+                    <table class= "list">
+                        <thead>
+                            <tr>
+                                <th>Nome Completo </th>
+                                <th>ID</th>
+                                <th>salário</th>
+                                <th>Cidade</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </td>
+
+            </td>
+        </tr>
+
+
+    </table>
+
     <script  src= "js/script.js"></script>
-
-
 </body>
 
 
